Fix mis-alignment of poll counter on poll list

--- a/src/poll-list/style/main.scss
+++ b/src/poll-list/style/main.scss
@@ -42,6 +42,7 @@
 
 .poll-votes {
     float: right;
+    margin-top: 0.3em;
 }
 
 
